Проброс тестов на новом "пустом" файле. Тесты, естественно, не работают.

--- a/Tests/CfgIniNUnitTest/CfgIniNUnitTest.csproj
+++ b/Tests/CfgIniNUnitTest/CfgIniNUnitTest.csproj
@@ -24,6 +24,9 @@
     <None Update="cfg.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="cfg_empty.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
