--- a/KpblcNCadCfgIni/KpblcNCadCfgIni.csproj
+++ b/KpblcNCadCfgIni/KpblcNCadCfgIni.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
