Попытка добавления приложения в автозагрузку. Без проверок со стороны NC

--- a/Tests/AutoloadCommands/AutoloadCommands.csproj
+++ b/Tests/AutoloadCommands/AutoloadCommands.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="nanoCAD.Platform.NET" Version="23.1.6324.4405" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\KpblcNCadCfgIni\KpblcNCadCfgIni.csproj" />
+  </ItemGroup>
+
 </Project>
